--- a/src/app/components/services/services-page.component.html
+++ b/src/app/components/services/services-page.component.html
@@ -1,19 +1,320 @@
-<div class="container-fluid">
+<div class="container-fluid services-list">
+    <!--
     <div class="row">
-        <div class="col s12 page-content">
-            <div class="markdown-content" dynamic-component [componentTemplate]="content" [componentContext]="{ appService: appService }" [componentModules]="modules"></div>
+    <div class="col s12 page-content">
+    <div class="markdown-content" dynamic-component [componentTemplate]="content" [componentContext]="{ appService: appService }" [componentModules]="modules"></div></div></div> -->
+    <div class="row row-eq-height">
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-credit-card"></span>
+                    </div>
+                    <md-card-title>Credit Union</md-card-title>
+                    <md-card-subtitle>Run by people like you for people like you</md-card-subtitle>
+                </md-card-header>
+                <img md-card-image src="/app/assets/images/services/ryo-credit-union-banner-940x250.jpg">
+                <md-card-content>
+                    <p>
+                        The SCVO Credit Union is Scotland's leading voluntary sector credit union
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/credit-union']">Read more</button>
+                    <!-- <button md-button>Visit</button> -->
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-desktop"></span>
+                    </div>
+                    <md-card-title>Digital participation</md-card-title>
+                    <md-card-subtitle>Helping people and third sector organisations in Scotland develop their digital potential</md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                        Right now in Scotland, one in five adults lack Basic Digital Skills. These are the skills of safely communicating, transacting, managing information, problem solving and creating content to use the internet as part of modern day to day life. The people are more likely not to have these skills are older, poorer and facing other forms of disadvantage. In order to tackle exclusion and inequalities, our work focuses on equipping everyone with these skills.
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/digital']">Read more</button>
+                    <a md-button href="http://digital.scvo.org.uk">Visit site</a>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-calendar"></span>
+                    </div>
+                    <md-card-title>Events</md-card-title>
+                    <md-card-subtitle></md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/events']">Read more</button>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-money"></span>
+                    </div>
+                    <md-card-title>Funding Scotland</md-card-title>
+                    <md-card-subtitle>Find funding for your charity, community group or social enterprise using our free online search engine</md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                        Funding Scotland lists funders with a track record of supporting projects in Scotland. It includes grants, loans, prizes and other support. It is a valuable resource for charities, community groups, social enterprises and voluntary organisations of all shapes and sizes. It does not include funding opportunities for individuals or businesses.
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/funding-scotland']">Read more</button>
+                    <a md-button href="http://www.fundingscotland.com">Visit site</a>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-heart"></span>
+                    </div>
+                    <md-card-title>Good HQ</md-card-title>
+                    <md-card-subtitle>Share your experiences and get involved</md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                        Good HQ is the new digital platform that provides a place for people to review and share their experiences about the good causes and charities they care about.
+                    </p>
+                    <p>
+                        We want to give a voice to the people that know good causes best. People that use the services. Donate their money. Volunteer their time. Campaign for change.
+                    </p>
+                    <p>
+                        By unleashing the power of our collective voices, we can raise awareness, encourage more people to get involved and drive positive change.
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/good-hq']">Read more</button>
+                    <a md-button href="http://goodhq.org">Visit site</a>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-briefcase"></span>
+                    </div>
+                    <md-card-title><strong>good</strong>moves</md-card-title>
+                    <md-card-subtitle>The premier careers hub for The Civil Society, Charity and Voluntary Sector</md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/goodmoves']">Read more</button>
+                    <a md-button href="http://goodmoves.com">Visit site</a>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-file-text-o"></span>
+                    </div>
+                    <md-card-title>Keystone</md-card-title>
+                    <md-card-subtitle></md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                        KeyStone is a quality award and management toolkit for the people who manage village halls and community buildings. It provides checklists and resources to help you manage your building.
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/keystone']">Read more</button>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-laptop"></span>
+                    </div>
+                    <md-card-title>Managed IT</md-card-title>
+                    <md-card-subtitle></md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                        The SCVO IT Service offers a broad range of expertise to bring you the right technological solutions and support to help you in your day-to-day work. From sourcing the right equipment to meet your budget and specific needs to making sure it all runs smoothly, we’ve got it covered.
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/managed-it']">Read more</button>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-building-o"></span>
+                    </div>
+                    <md-card-title>Office Space</md-card-title>
+                    <md-card-subtitle></md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                        We think everyone in the third sector should have great places to work, so we’ve opened our doors to create shared office spaces for other charities and social enterprises. We’d really like you to keep us company.
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/office-space']">Read more</button>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-list-alt"></span>
+                    </div>
+                    <md-card-title>Payroll</md-card-title>
+                    <md-card-subtitle></md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/payroll']">Read more</button>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-comments-o"></span>
+                    </div>
+                    <md-card-title>Professional networks</md-card-title>
+                    <md-card-subtitle></md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                        SCVO's professional networks offer great opportunities for you to meet people with similar roles from across the sector.
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/professional-networks']">Read more</button>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-newspaper-o"></span>
+                    </div>
+                    <md-card-title>Third Force News</md-card-title>
+                    <md-card-subtitle>The voice of Scotland's third sector</md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                        Third Force News (TFN) is Scotland’s only dedicated daily news outlet for charities and voluntary organisations in Scotland.
+                    </p>
+                    <p>
+                        TFN covers all the important news facing the third sector, including funding, management, environment, housing, families, health and social care, and poverty.
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/tfn']">Read more</button>
+                    <a md-button href="http://www.thirdforcenews.org.uk">Visit site</a>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-graduation-cap"></span>
+                    </div>
+                    <md-card-title>Training</md-card-title>
+                    <md-card-subtitle></md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/training']">Read more</button>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-info-circle"></span>
+                    </div>
+                    <md-card-title>SAIF</md-card-title>
+                    <md-card-subtitle>Scottish Accessible Information Forum</md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                        SAIF aims to make information accessible to everyone who needs it. SAIF does this by raising awareness and understanding of the importance of accessible information and by providing a range of guidance, advice and practical support to information providers across Scotland.
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/saif']">Read more</button>
+                    <a md-button href="http://www.saifscotland.org.uk">Visit site</a>
+                </md-card-actions>
+            </md-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-handshake-o"></span>
+                    </div>
+                    <md-card-title>SCVO membership</md-card-title>
+                    <md-card-subtitle>Supporting, promoting &amp; connecting Scotland's third sector</md-card-subtitle>
+                </md-card-header>
+                <!-- <img md-card-image src="/app/assets/images/services/"> -->
+                <md-card-content>
+                    <p>
+                        Whether you're a small voluntary group just starting out, an established household name or somewhere in between, membership of SCVO provides great benefits.
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/services/membership']">Read more</button>
+                </md-card-actions>
+            </md-card>
         </div>
     </div>
-    <md-grid-list cols="3" rowHeight="100px">
-        <md-grid-tile>
-            <h2 id="-credit-union-services-credit-union-">
-                <a title="" ng-reflect-router-link="/services/credit-union" href="/services/credit-union">Credit union</a>
-            </h2>
-        </md-grid-tile>
-        <md-grid-tile>
-            <h2 id="-digital-participation-http-digital-scvo-org-uk-">
-                <a href="http://digital.scvo.org.uk" title="">Digital participation</a>
-            </h2>
-        </md-grid-tile>
-    </md-grid-list>
 </div>
