--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,12 +2,12 @@
     <div class="container-fluid">
         <div class="footer-main">
             <div class="row">
-                <div class="col l7 m5 s12">
+                <div class="col-lg-7 col-md-5 col-sm-12">
                     <a [routerLink]="['/']" class="brand-logo"><img src="app/assets/images/logos/scvo-white.png" /> SCVO</a>
                     <!-- <h5>About SCVO</h5> -->
                     <p>The <strong>Scottish Council for Voluntary Organisations</strong> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</p>
                 </div>
-                <div class="col l2 m3 s6 offset-m1 offset-l1">
+                <div class="col-lg-2 col-md-3 col-sm-6">
                     <!-- <h5>Contact</h5> -->
                     <ul>
                         <li><a class="grey-text text-lighten-3" [routerLink]="['/about']">About SCVO</a></li>
@@ -16,7 +16,7 @@
                         <li><a class="grey-text text-lighten-3" [routerLink]="['/accessibility']">Accessibility</a></li>
                     </ul>
                 </div>
-                <div class="col l2 m3 s6">
+                <div class="col-lg-2 col-md-3 col-sm-6">
                     <!-- <h5>Contact</h5> -->
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="mailto:enquiries@scvo.org.uk">enquiries@scvo.org.uk</a></li>
@@ -28,7 +28,7 @@
             </div>
             <div class="footer-copyright">
                 <div class="row">
-                    <div class="col s12">
+                    <div class="col-sm-12">
                         <p><small>&copy; {{ date | date:'yyyy' }}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Registration number <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>.</small></p>
                     </div>
                 </div>
