--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,6 +3,9 @@
         <md-toolbar-row class="brand navbar">
             <a [routerLink]="['/']" class="brand-logo"><img src="app/assets/images/logos/scvo-white.png" /> SCVO <span class="version">beta</span></a>
             <ul menu="top" class="list-inline right menu-top"></ul>
+            <md-input-container>
+                <input mdInput ngui-auto-complete [(ngModel)]="searchQuery" [source]="arrayOfNumbers" placeholder="Search" />
+            </md-input-container>
         </md-toolbar-row>
 
         <md-toolbar-row class="navbar">
