--- a/src/app/components/services/services-page.component.html
+++ b/src/app/components/services/services-page.component.html
@@ -119,7 +119,7 @@
                     <div md-card-avatar class="example-header-image">
                         <span class="fa fa-2x fa-briefcase"></span>
                     </div>
-                    <md-card-title><strong>good</strong>moves</md-card-title>
+                    <md-card-title>Goodmoves</md-card-title>
                     <md-card-subtitle>The premier careers hub for The Civil Society, Charity and Voluntary Sector</md-card-subtitle>
                 </md-card-header>
                 <!-- <img md-card-image src="/app/assets/images/services/"> -->
